horizontal scroll issue solved

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -112,7 +112,6 @@
 }
 
 .sortMedia {
-    width: 100%;
     margin: 45px 100px;
     display: flex;
     align-items: center;
